# cdi-network

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.e2e.yml  docker-compose.generated.yml  docker-compose.real.yml  docker-compose.test.yml  docker-compose.yml  index.html  jest.config.ts  package-lock.json  package.json  test-tabmesh.html  tsconfig.json
__tests__/browser/: GGUFParser.test.ts  HFModelSeeder.test.ts  ProgressiveScaling.test.ts  ShardedInference.test.ts  WebGPUAutoregressive.test.ts
__tests__/core/: OrbitDbManager.test.ts
__tests__/crypto/: CryptoManager.test.ts  ZkInferenceProof.test.ts  ZkRapidsnark.test.ts
__tests__/e2e/: DistributedInference.e2e.test.ts  integration.test.ts
__tests__/identity/: LocalWallet.test.ts
__tests__/llm/: OllamaClient.test.ts
__tests__/node/: SwarmNode.test.ts
__tests__/pipeline/: ActivationMasker.test.ts  ActivationRelay.test.ts  OllamaComputeAdapter.test.ts  PipelineIntegration.test.ts  PipelineNode.test.ts  PipelineNodeV2.test.ts  PipelinePoC.test.ts  PipelineRegistry.test.ts  TestOrchestrator.test.ts  TestOrchestratorV2.test.ts  ZKP.test.ts
browser/: cdi-node.js  crypto-browser.js  index.html
browser/cdi-wasm/: Cargo.toml
browser/cdi-wasm/src/: lib.rs  signing.rs  tokenomics.rs  wallet.rs
docs/: WHITEPAPER.md  index.html
prototypes/: ollama-check.ts
scripts/: build-rapidsnark.sh  gen-compose.ts  test-l1-smoke.mjs  test-l2-discovery.mjs  test-l3-economy.mjs  test-l4-scale.mjs  test-real-e2e.mjs  test-real-l1.mjs  test-real-l2.mjs  test-swarm.sh
src/: cli.ts
(+119 files in other folders)
